<resources>
    <string name="app_name">RDE Android Sample</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_document_slideshow">nav_document_slideshow thing</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_document_enroll">Enroll Document</string>
    <string name="menu_login">Login</string>
    <string name="button_enroll">Enroll</string>
    <string name="hint_date_of_birth">Date of birth</string>
    <string name="hint_document_id">Document id</string>
    <string name="hint_date_of_expiry">Date of expiry</string>
    <string name="hint_enrollment_token">Enrollment Token</string>
    <string name="hint_display_name">Memorable name</string>


    <string name="enrollment_instructions">Please enter all of information below</string>
    <string name="title_activity_read_document_nfc">ReadDocumentNfcActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="position_document_for_reading">Position document so that the NFC chip can be accessed.</string>
    <string name="title_activity_list_documents">ListDocumentsActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint_password">Account password</string>
    <string name="hint_user_name">Account email</string>
    <string name="account_header">Account Login</string>
    <string name="enrollment_token_header">Enrollment Token from website</string>
    <string name="mrz_header">Machine-readable document details</string>
    <string name="display_name_header">Add memorable name for document in website</string>
    <string name="message_from_header">From:</string>
    <string name="message_when_header">Sent:</string>
    <string name="message_note_header">Note:</string>
    <string name="message_content_header">File 1 Content:</string>
    <string name="title_activity_scan_token">ScanToken</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_test_rde_session">TestRdeSessionActivity</string>

</resources>