<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/enter_info_header"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:text="@string/enrollment_instructions"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDocumentId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_document_id"
        android:inputType="textLongMessage"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/enter_info_header"
        app:layout_constraintEnd_toEndOf="@+id/enter_info_header"
        app:layout_constraintTop_toBottomOf="@+id/enter_info_header"
        app:layout_constraintBottom_toTopOf="@id/editTextDob"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <EditText
        android:id="@+id/editTextDob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_date_of_birth"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDocumentId"
        app:layout_constraintBottom_toTopOf="@id/editTextDocDoe"
        />

    <EditText
        android:id="@+id/editTextDocDoe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_date_of_expiry"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDob" />

    <Button
        android:id="@+id/buttonEnroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>