<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowMessageActivity">

    <TextView
        android:id="@+id/from_header"
        android:layout_height="16dp"
        android:layout_width="match_parent"
        android:text="@string/message_from_header"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"

        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textViewWhoFrom"
        />

    <TextView
        android:id="@+id/textViewWhoFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="textViewWhoFrom"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/from_header"
        app:layout_constraintBottom_toTopOf="@+id/when_header"
        />

    <TextView
        android:id="@+id/when_header"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"

        android:layout_height="16dp"

        android:layout_width="match_parent"
        android:text="@string/message_when_header"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/textViewWhoFrom"
        app:layout_constraintBottom_toTopOf="@+id/textViewWhenSent"
        />

    <TextView
        android:id="@+id/textViewWhenSent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="textViewWhenSent"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/when_header"
        app:layout_constraintBottom_toTopOf="@+id/from_header"
        />

    <TextView
        android:id="@+id/note_header"
        android:layout_height="16dp"

        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:text="@string/message_note_header"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"

        app:layout_constraintTop_toBottomOf="@+id/textViewWhenSent"
        app:layout_constraintBottom_toTopOf="@+id/textViewShortNote"
        />

    <TextView
        android:id="@+id/textViewShortNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"

        android:minHeight="144dp"

        android:text="textViewShortNote"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"

        app:layout_constraintTop_toBottomOf="@+id/note_header"
        app:layout_constraintBottom_toTopOf="@+id/content_header"

        />

    <TextView
        android:id="@+id/content_header"
        android:layout_height="16dp"

        android:layout_width="match_parent"
        android:text="@string/message_content_header"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"

        app:layout_constraintTop_toBottomOf="@+id/textViewShortNote"
        app:layout_constraintBottom_toTopOf="@+id/textViewFileContent"
        />

    <TextView
        android:id="@+id/textViewFileContent"
        android:layout_width="match_parent"
        android:layout_height="288dp"
        android:layout_marginLeft="8dp"

        android:minHeight="288dp"

        android:text="textViewFileContent"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_header" />

</androidx.constraintlayout.widget.ConstraintLayout>